# docseek-voice-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLINIC_SETUP.md  DOCTOR_CONFIG.md  Dockerfile  MCP_SERVER.md  QUICKSTART.md  README.md  clinics.example.json  doctors.example.json  mcp.json  pyproject.toml
src/: agent.py
src/docseek_voice_agent/: __init__.py  clinic_config.py  clinic_logic.py  config.py  database.py  doctor_config.py  mcp_server.py
tests/: __init__.py  test_clinic_logic.py  test_mcp_server.py
