[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docseek-voice-agent"
version = "0.1.0"
description = "Medical front desk voice agent for appointment scheduling and patient intake"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DocSeek Team" }]
license = { text = "MIT" }

dependencies = [
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-agents-openai~=0.15",
    "livekit-agents-deepgram~=0.13",
    "livekit-agents-google~=0.14",
    "livekit~=0.13",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.25",
    "mcp>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23.9",
    "ruff>=0.13",
    "mypy>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docseek_voice_agent"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
